Fixed light/dark mode

--- a/styles/css/prism.css
+++ b/styles/css/prism.css
@@ -50,7 +50,7 @@
   :not(pre) > code[class*="language-"],
   pre[class*="language-"] {
     background: #f5f2f0;
-    background: white; }
+    background: #f3f3f3; }
 
   /* Inline code */
   :not(pre) > code[class*="language-"] {
