--- a/styles/sass/prism-light.scss
+++ b/styles/sass/prism-light.scss
@@ -59,7 +59,7 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
 	background: #f5f2f0;
-	background: white;
+	background: #f3f3f3;
 }
 
 /* Inline code */
