--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -88,21 +88,17 @@ p {
 }
 
 .block {
-    padding: 24px;
-    border-radius: 8px;
-    margin-bottom: 24px;
-    background: #eee;
-    color: black;
-    @media (prefers-color-scheme: dark) {
-        color: white;
-        background: #181818;
-    }
+    margin-bottom: 64px;
 }
 
 .snippet {
     background: white;
     padding: 16px;
     border-radius: 8px;
+    border: 1px solid #f3f3f3;
+    @media (prefers-color-scheme: dark) {
+        border: none;
+    }
 }
 
 .code {
